# Jarvis-Voice-Assistant

./: .gitignore  GenerateSound.py  MANIFEST.in  README.md  config_template.py  contact_template.json  install.sh  intent_classifier.py  intents.json  main.py  pyproject.toml  requirements.txt  secondaryClassifier.py  setup_jarvis.py  uninstall.sh  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_help.md
faceAuthorization/: faceDetection.py
scripts/: README.md
static/: index.html
tests/: test.py
voice_models/: README.md  voice_setup.py  voice_setup.sh
